--- a/dashboard/views/profile.ejs
+++ b/dashboard/views/profile.ejs
@@ -3,29 +3,29 @@
     <head>
         <%- include("utils/header") %>
     </head>
-    <body class="dark:bg-gray-primary bg-white-primary">
+    <body class="bgMainTheme animationTheme">
         <div>
             <%- include("utils/navbar") %> 
 
             <div>
                 <div class="group">
-                    <div class="dark:bg-gray-secondary bg-white-secondary m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
+                    <div class="bgTheme m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
                         <div class="text-center">
-                            <p class="dark:text-white text-black font-bold text-xl"><%= res.__("dashboard.profile.globalInfo") %></p>
+                            <p class="textTheme font-bold text-xl"><%= res.__("dashboard.profile.globalInfo") %></p>
                         </div>
                         <div class="flex items-center justify-center my-1">
-                            <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-5/12"></div>
+                            <div class="bgMainTheme h-0.5 w-5/12"></div>
                         </div>
                         <div class="p-5">
-                            <p class="dark:text-white text-black break-words"><i class="far fa-id-card"></i> <%= res.__("dashboard.profile.uniqueId") %> : <%= profileData.accountId %></p>
-                            <p class="dark:text-white text-black break-words"><i class="fas fa-language"></i> <%= res.__("dashboard.profile.activeLang") %> : <%= res.__(`dashboard.profile.${profileData.lang}`) %> <a class="hover:text-black dark:hover:text-white font-bold <%= "text-" + req.color %>" href="/profile/settings"><%= res.__("dashboard.profile.change") %> <i class="fas fa-cog"></i></a></p>
-                            <p class="dark:text-white text-black break-words"><i class="fas fa-clock"></i> <%= res.__("dashboard.profile.createdAt") %> <%= req.functions.formatDate({ date: profileData.createdTimestamp }) %></p>
+                            <p class="textTheme break-words"><i class="far fa-id-card"></i> <%= res.__("dashboard.profile.uniqueId") %> : <%= profileData.accountId %></p>
+                            <p class="textTheme break-words"><i class="fas fa-language"></i> <%= res.__("dashboard.profile.activeLang") %> : <%= res.__(`dashboard.profile.${profileData.lang}`) %> <a class="hover:text-black dark:hover:text-white font-bold <%= "text-" + req.color %>" href="/profile/settings"><%= res.__("dashboard.profile.change") %> <i class="fas fa-cog"></i></a></p>
+                            <p class="textTheme break-words"><i class="fas fa-clock"></i> <%= res.__("dashboard.profile.createdAt") %> <%= req.functions.formatDate({ date: profileData.createdTimestamp }) %></p>
                         </div>
                     </div>
                 </div>
                 <% plateformData.forEach(plateform => { %>
                     <div class="group">
-                        <div class="<%= plateform.plateform %> dark:bg-gray-secondary bg-white-secondary m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
+                        <div class="<%= plateform.plateform %> bgTheme m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
                             <div class="text-center">
                                 <% if (plateform.plateform === "discord" && plateform.data.avatar) { %>
                                     <img class="my-0 mx-auto h-32 w-32" src="https://cdn.discordapp.com/avatars/<%= plateform.data.id %>/<%= plateform.data.avatar %>.png?size=128" />
@@ -33,20 +33,20 @@
                                     <img class="my-0 mx-auto h-32 w-32" src="https://avatars.dicebear.com/api/bottts/<%= profileData.accountId %>.svg" />
                                 <% } %>
 
-                                <p class="dark:text-white text-black"><%= res.__("dashboard.profile.profile") %> <%= plateform.plateform %></p>
+                                <p class="textTheme"><%= res.__("dashboard.profile.profile") %> <%= plateform.plateform %></p>
                             </div>
                             <div class="flex items-center justify-center my-1">
-                                <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-5/12"></div>
+                                <div class="bgMainTheme h-0.5 w-5/12"></div>
                             </div>
                             <div class="p-5">
-                                <p class="dark:text-white text-black"><%= res.__("dashboard.profile.infoUser") %> <span class="font-bold"><%= plateform.data.username %></span></p>
-                                <p class="dark:text-white text-black"><%= res.__("dashboard.profile.partyPlayed") %>
+                                <p class="textTheme"><%= res.__("dashboard.profile.infoUser") %> <span class="font-bold"><%= plateform.data.username %></span></p>
+                                <p class="textTheme"><%= res.__("dashboard.profile.partyPlayed") %>
                                     <% if (plateform.plateform === "discord") { %>
                                         <span class="text-blurple">
                                     <% } else if (plateform.plateform === "instagram") { %>
                                         <span class="text-transparent gradient-instagram">
                                     <% } else { %>
-                                        <span class="dark:text-white text-black">
+                                        <span class="textTheme">
                                     <% } %>
                                 <%= plateform.plateform %></span> : <%= profileData.statistics.filter(pltf => pltf.plateform === plateform.plateform).length %></p>
 
@@ -71,10 +71,10 @@
                                             -->
                                         </a>
                                     <% } else { %>
-                                        <p class="dark:text-white text-black"><%= res.__("dashboard.profile.noDataAboutGame") %></p>
+                                        <p class="textTheme"><%= res.__("dashboard.profile.noDataAboutGame") %></p>
                                     <% } %>
                                 <% } else { %>
-                                    <p class="dark:text-white text-black"><%= res.__("dashboard.profile.noDataSave") %></p>
+                                    <p class="textTheme"><%= res.__("dashboard.profile.noDataSave") %></p>
                                 <% } %>
 
                             </div>
@@ -82,7 +82,7 @@
                     </div>
                 <% }) %>
                 <div class="flex items-center justify-center mb-5">
-                    <div class="dark:bg-white-primary bg-gray-primary h-0.5 w-10/12"></div>
+                    <div class="bgMainTheme h-0.5 w-10/12"></div>
                 </div>
                 <div class="flex flex-col items-center justify-center">
                     <a class="<%= "text-" + req.color %> dark:hover:text-white hover:text-black text-xl" href="/api/instagram/mergeAccount"><%= res.__("dashboard.profile.addDiscordAccount") %></a>
