--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -21,7 +21,7 @@
                     </a>
                 </div>
                 <div class="flex items-center justify-center mt-10">
-                    <div class="bgMainTheme h-0.5 w-11/12"></div>
+                    <div class="bgSepTheme h-0.5 w-11/12"></div>
                 </div>
                 <div class="grid grid-cols-1 items-center justify-center">
                     <div class="group flex items-center justify-center">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="flex items-center justify-center">
-                        <div class="bgMainTheme h-0.5 w-11/12"></div>
+                        <div class="bgSepTheme h-0.5 w-11/12"></div>
                     </div>
                     <div class="group flex items-center justify-center">
                         <div class="grid grid-cols-1 lg:grid-cols-2 bgTheme h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
