[+] Fix style problem

--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div>
-                    <p><%= res.__("dashboard.login.noAccount") %></p>
+                    <p class="textTheme"><%= res.__("dashboard.login.noAccount") %></p>
                 </div>
             </div>
         </div>
