--- a/dashboard/views/profile.ejs
+++ b/dashboard/views/profile.ejs
@@ -14,7 +14,7 @@
                             <p class="textTheme font-bold text-xl"><%= res.__("dashboard.profile.globalInfo") %></p>
                         </div>
                         <div class="flex items-center justify-center my-1">
-                            <div class="bgMainTheme h-0.5 w-5/12"></div>
+                            <div class="bgSepTheme h-0.5 w-5/12"></div>
                         </div>
                         <div class="p-5">
                             <p class="textTheme break-words"><i class="far fa-id-card"></i> <%= res.__("dashboard.profile.uniqueId") %> : <%= profileData.accountId %></p>
@@ -36,7 +36,7 @@
                                 <p class="textTheme"><%= res.__("dashboard.profile.profile") %> <%= plateform.plateform %></p>
                             </div>
                             <div class="flex items-center justify-center my-1">
-                                <div class="bgMainTheme h-0.5 w-5/12"></div>
+                                <div class="bgSepTheme h-0.5 w-5/12"></div>
                             </div>
                             <div class="p-5">
                                 <p class="textTheme"><%= res.__("dashboard.profile.infoUser") %> <span class="font-bold"><%= plateform.data.username %></span></p>
@@ -82,7 +82,7 @@
                     </div>
                 <% }) %>
                 <div class="flex items-center justify-center mb-5">
-                    <div class="bgMainTheme h-0.5 w-10/12"></div>
+                    <div class="bgSepTheme h-0.5 w-10/12"></div>
                 </div>
                 <div class="flex flex-col items-center justify-center">
                     <a class="<%= "text-" + req.color %> dark:hover:text-white hover:text-black text-xl" href="/api/instagram/mergeAccount"><%= res.__("dashboard.profile.addDiscordAccount") %></a>
