--- a/dashboard/views/server.ejs
+++ b/dashboard/views/server.ejs
@@ -93,8 +93,8 @@
                         <div class="bgSepTheme h-0.5 w-11/12"></div>
                     </div>
                     <div>
-                        <p class="textTheme"><%= res.__("dashboard.server.firstPlayedGame") %> <%= req.functions.formatDate({ date: firstPlayedGame }) %></p>
-                        <p class="textTheme"><%= res.__("dashboard.server.lastPlayedGame") %> <%= req.functions.formatDate({ date: lastPlayedGame }) %></p>
+                        <p class="textTheme"><%= res.__("dashboard.server.firstPlayedGame") %> <%= req.functions.formatDate(firstPlayedGame) %></p>
+                        <p class="textTheme"><%= res.__("dashboard.server.lastPlayedGame") %> <%= req.functions.formatDate(lastPlayedGame) %></p>
                     </div>
                     <div class="flex items-center justify-center m-5">
                         <div class="bgSepTheme h-0.5 w-11/12"></div>
