--- a/dashboard/views/server.ejs
+++ b/dashboard/views/server.ejs
@@ -30,71 +30,72 @@
 
                         let playedGame = {} 
                         let countPlayerGame = {}
-                        let firstPlayedGame = null
-                        let lastPlayedGame = null
+                        let firstPlayedGame, lastPlayedGame, highestPlayedGame, smallerPlayedGame, highestPlayerGame, smallestPlayerGame
+                        let maxParty = 0
 
                         const games = req.data.games.filter(game => game.guildOrChat.type === "guild" && game.guildOrChat.data.id === server.id)
                         
-                        games.forEach(game => {
-                            if (firstPlayedGame > game.date || !firstPlayedGame) firstPlayedGame = game.date
-                            if (lastPlayedGame < game.date) lastPlayedGame = game.date
-                            
-                            // Dispatch gameDate by day
-                            const gameDate = new Date(game.date)
-                            const gameDay = gameDate.getDate()
-                            const todayDay = new Date().getDate()
+                        if (games.size > 0) {
+                            games.forEach(game => {
+                                if (firstPlayedGame > game.date || !firstPlayedGame) firstPlayedGame = game.date
+                                if (lastPlayedGame < game.date) lastPlayedGame = game.date
+                                
+                                // Dispatch gameDate by day
+                                const gameDate = new Date(game.date)
+                                const gameDay = gameDate.getDate()
+                                const todayDay = new Date().getDate()
 
-                            if (todayDay - gameDay <= 6) {
-                                lastPlayedGames[todayDay - gameDay].push(game)
+                                if (todayDay - gameDay <= 6) {
+                                    lastPlayedGames[todayDay - gameDay].push(game)
+                                }
+
+                                playedGame[game.gameName] = (playedGame[game.gameName] || 0) + 1
+                                
+                                for (let i = 0; i < game.beetween.length; i++) {
+                                    const { id, username } = game.beetween[i]
+
+                                    if (!countPlayerGame[id]) countPlayerGame[id] = {}
+                                    countPlayerGame[id].count = (countPlayerGame[id].count || 0) + 1
+                                    countPlayerGame[id].username = username
+                                    countPlayerGame[id].id = id
+                                }
+                            })
+
+                            for (let i = 0; i < lastPlayedGames.length; i++) {
+                                if (lastPlayedGames[i].length > maxParty) maxParty = lastPlayedGames[i].length
                             }
 
-                            playedGame[game.gameName] = (playedGame[game.gameName] || 0) + 1
-                            
-                            for (let i = 0; i < game.beetween.length; i++) {
-                                const { id, username } = game.beetween[i]
+                            //Get highest played game
+                            const highestPlayedGame = Object.keys(playedGame).reduce((a, b) => playedGame[a] > playedGame[b] ? a : b)
+                        
+                            //Get smaller played game
+                            const smallerPlayedGame = Object.keys(playedGame).reduce((a, b) => playedGame[a] < playedGame[b] ? a : b)
 
-                                if (!countPlayerGame[id]) countPlayerGame[id] = {}
-                                countPlayerGame[id].count = (countPlayerGame[id].count || 0) + 1
-                                countPlayerGame[id].username = username
-                                countPlayerGame[id].id = id
-                            }
-                        })
-
-                        let maxParty = 0
-                        for (let i = 0; i < lastPlayedGames.length; i++) {
-                            if (lastPlayedGames[i].length > maxParty) maxParty = lastPlayedGames[i].length
+                            //Get highest player game
+                            const highestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame[a].count > countPlayerGame[b].count ? a : b)
+                        
+                            //Get smallest player game
+                            const smallestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame[a].count < countPlayerGame[b].count ? a : b)
                         }
-
-                        //Get highest played game
-                        const highestPlayedGame = Object.keys(playedGame).reduce((a, b) => playedGame[a] > playedGame[b] ? a : b)
-                    
-                        //Get smaller played game
-                        const smallerPlayedGame = Object.keys(playedGame).reduce((a, b) => playedGame[a] < playedGame[b] ? a : b)
-
-                        //Get highest player game
-                        const highestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame[a].count > countPlayerGame[b].count ? a : b)
-                    
-                        //Get smallest player game
-                        const smallestPlayerGame = Object.keys(countPlayerGame).reduce((a, b) => countPlayerGame[a].count < countPlayerGame[b].count ? a : b)
                     %>
 
                     <div>
-                        <p class="textTheme"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
-                        <p class="textTheme"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame %> <%= res.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="textTheme"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayedGame") %> <%= highestPlayedGame ?? res.__("dashboard.server.noGamePlayed") %> <%= res.__("dashboard.server.with") %> <%= playedGame[highestPlayedGame] ?? 0 %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="textTheme"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayedGame") %> <%= smallerPlayedGame ?? res.__("dashboard.server.noGamePlayed") %> <%= res.__("dashboard.server.with") %> <%= playedGame[smallerPlayedGame] ?? 0 %> <%= res.__("dashboard.server.party") %></p>
                     </div>
                     <div class="flex items-center justify-center m-5">
                         <div class="bgSepTheme h-0.5 w-11/12"></div>
                     </div>
                     <div>
-                        <p class="textTheme"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayerGame") %> <%= countPlayerGame[highestPlayerGame].username %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame].count %> <%= res.__("dashboard.server.party") %></p>
-                        <p class="textTheme"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayerGame") %> <%= countPlayerGame[smallestPlayerGame].username %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame].count %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="textTheme"><i class="fas fa-arrow-up text-green pr-2"></i><%= res.__("dashboard.server.highestPlayerGame") %> <%= countPlayerGame[highestPlayerGame]?.username ?? res.__("dashboard.server.noGamePlayed") %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[highestPlayerGame]?.count ?? 0 %> <%= res.__("dashboard.server.party") %></p>
+                        <p class="textTheme"><i class="fas fa-arrow-down text-red pr-2"></i><%= res.__("dashboard.server.smallerPlayerGame") %> <%= countPlayerGame[smallestPlayerGame]?.username ?? res.__("dashboard.server.noGamePlayed") %> <%= res.__("dashboard.server.with") %> <%= countPlayerGame[smallestPlayerGame]?.count ?? 0 %> <%= res.__("dashboard.server.party") %></p>
                     </div>
                     <div class="flex items-center justify-center m-5">
                         <div class="bgSepTheme h-0.5 w-11/12"></div>
                     </div>
                     <div>
-                        <p class="textTheme"><%= res.__("dashboard.server.firstPlayedGame") %> <%= req.functions.formatDate(firstPlayedGame) %></p>
-                        <p class="textTheme"><%= res.__("dashboard.server.lastPlayedGame") %> <%= req.functions.formatDate(lastPlayedGame) %></p>
+                        <p class="textTheme"><%= res.__("dashboard.server.firstPlayedGame") %> <%= req.functions.formatDate(firstPlayedGame ?? new Date()) %></p>
+                        <p class="textTheme"><%= res.__("dashboard.server.lastPlayedGame") %> <%= req.functions.formatDate(lastPlayedGame ?? new Date()) %></p>
                     </div>
                     <div class="flex items-center justify-center m-5">
                         <div class="bgSepTheme h-0.5 w-11/12"></div>
@@ -134,9 +135,11 @@
                                         <% if (index === 0) { %>
                                             <%= res.__("dashboard.server.today") %>
                                         <% } else { %> 
-                                            <%= const date = new Date() %>
-                                            <%= date.setDate(date.getDate() - index) %>
-                                            <%= date.setMonth(date.getMonth() + 1) %>
+                                            <% 
+                                                let date = new Date() 
+                                                date.setDate(date.getDate() - index)
+                                                date.setMonth(date.getMonth() + 1)
+                                            %>
 
                                             <%= req.functions.formatDay(date) %>/<%= req.functions.formatMonth(date) %>
                                         <% } %>
