--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="<%= res.getLocale() %>">
     <head>
+        <title>Game Bot</title>
+
+        <meta name="description" content="A lot of funny game ! In multiple langage">
+        <meta name="theme-color" content="<%= req.color %>">
+
         <%- include("utils/header") %>
     </head>
     <body class="bgMainTheme animationTheme">
