--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="<%= res.getLocale() %>">
     <head>
+        <title>Game Bot | Login</title>
+        
+        <meta name="theme-color" content="<%= req.color %>">
+
         <%- include("utils/header") %>
     </head>
     <body class="bgMainTheme animationTheme">
