--- a/dashboard/views/utils/header.ejs
+++ b/dashboard/views/utils/header.ejs
@@ -1,32 +1,6 @@
-<meta charset="utf-8" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="title" content="Game Bot">
-<meta name="description" content="A lot of funny games">
-<meta name="keywords" content="bot, discord, games">
-<meta name="robots" content="index, follow">
-<meta name="language" content="English">
-
-<!--
-<meta name="og:description" content="Dashboard de <%#= req.bot.user.username%> • Bot multifonction 🐨">
-<meta property="og:title" content="Sudref">
-<meta name="og:keywords" content="sudref,discord,bot,discordjs,discord.js,discordbot,Sudref,soudref,Soudref,tk,sudref.tk,sudref.fr,sudref bot">
-<meta name="og:author" content="Superalexandre">
-<meta name="theme-color" content="#6400c8">
-<meta property="og:image" content="https://cdn.discordapp.com/avatars/<%#=req.bot.user.id%>/<%#=req.bot.user.avatar%>.png">
-<meta property="og:url" content="https://sudref.tk">
-<meta property="og:site_name" content="Sudref">
-
-<meta name="twitter:title" content="Sudref">
-<meta name="twitter:description" content="Dashboard de <%#=req.bot.user.username%> • Bot multifonction 🐨">
-<meta name="twitter:image" content="https://cdn.discordapp.com/avatars/<%#=req.bot.user.id%>/<%#=req.bot.user.avatar%>.png">
-<meta name="twitter:card" value="summary">
-<meta name="twitter:title" content="Sudref">
--->
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/public/styles/styles.css">
 <link rel="icon" type="image/png" href="../../public/img/logos/Logo no bg.png"/>
 <script src="https://kit.fontawesome.com/22b81d2d14.js" crossorigin="anonymous"></script>
-
-<title>Game Bot</title>
