--- a/dashboard/views/viewProfile.ejs
+++ b/dashboard/views/viewProfile.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="<%= res.getLocale() %>">
     <head>
+        <title>Game Bot | Profile of </title>
+
+        <meta name="description" content="Profile of ">
+
+        <meta name="theme-color" content="<%= req.color %>">
+
         <%- include("utils/header") %>
     </head>
     <body class="bgMainTheme animationTheme">
