--- a/dashboard/views/sync.ejs
+++ b/dashboard/views/sync.ejs
@@ -3,7 +3,7 @@
     <head>
         <title>Game Bot | Sync</title>
 
-        <meta name="theme-color" content="<%= req.color %>">
+        <meta name="theme-color" content="<%= req.config.colors[req.color] %>">
 
         <%- include("utils/header") %>
     </head>
