--- a/dashboard/views/utils/navbar.ejs
+++ b/dashboard/views/utils/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="flex items-center justify-between flex-wrap p-6 dark:bg-gray-secondary bg-white-secondary transition duration-500 ease-in-out">
     <div class="flex items-center flex-shrink-0 <%= "text-" + req.color%> mr-6">
         <a href="/" class="uppercase font-bold hover:text-black dark:hover:text-white">
-            <img class="h-16 inline-block mr-6 align-middle" src="../public/img/logos/Logo.png" alt="Logo"/>
+            <img class="h-16 inline-block mr-6 align-middle" src="/public/img/logos/Logo.png" alt="Logo"/>
             
             <span class="hidden align-middle lg:inline-block"><%= res.__("dashboard.navbar.home") %></span>
         </a>
